--- a/autres/infos.html
+++ b/autres/infos.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../assets/style.css">
-  <script src="../assets/nav.js" defer></script>
+  <script src="../assets/index.js" defer></script>
 </head>
 
 <body>
@@ -75,8 +75,8 @@
             <h1 class="m-5"> FREE PALESTINE !</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto, autem cum, dolores doloribus esse fugiat illo illum iste iure labore magni modi provident soluta voluptas voluptatibus voluptatum. Omnis, sapiente!</p>
             <br>
-            <div class="prog container w-75">
-              <a href="#" class=" "><div class="col border rounded-5 m-3 p-2 ">Donate now </div></a>
+            <div class="prog container d-flex justify-content-center">
+                <a href="#" class="w-50 "><div class="col border rounded-5 m-3 pb-1 pt-1  "> DONATE NOW </div></a>
             </div>
         </div>
 
@@ -91,32 +91,37 @@
             </iframe>
         </div>
 
-        <div class=" vh-60 vw-100 p-5">
-            <h1 class="m-5"> CONTACT US </h1>
 
-            <div class="input-box">
-              <input type="text" placeholder="Prénom" required>
+        <div class="  p-5">
+            <div class="row ">
+                <h1 class=""> CONTACT US </h1>
+                <div class=" col col-md-6 form-group pb-4">
+                    <input type="text" name="firstName" class="form-control" id="firstname" placeholder="Your firstname" autocomplete="family-name" required />
+                </div>
+
+                <div class=" col col-md-6 form-group pb-4">
+                    <input type="text" name="lastName" class="form-control" id="name" placeholder="Your name" autocomplete="family-name" required />
+                </div>
+
             </div>
 
-            <div class="input-box">
-              <input type="text" placeholder="Nom" required>
+            <div class=" col form-group pb-4">
+                <input type="email" class="form-control" name="email" id="email" placeholder="Your email" autocomplete="email" required />
             </div>
 
-            <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm">
 
-            <button class="btn"> Envoyer</button>
-            <br>
+            <div class="col form-group pb-4">
+                <input type="text" class="form-control" name="subject" id="subject" placeholder="Objet" required />
+            </div>
+
+            <div class="col form-group pb-4">
+                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+            </div>
+
+            <div class="prog container d-flex justify-content-center">
+                <a href="#" class="w-50 "><div class="col border rounded-5 m-3 pb-1 pt-1  "> SEND </div></a>
+            </div>
         </div>
-
-        <div class="row">
-            <div class="col">
-                <input type="text" class="form-control" placeholder="First name" aria-label="First name">
-            </div>
-            <div class="col">
-                <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
-            </div>
-        </div>
-
     </main>
 
     <!-- ========== fin main ========== -->
