--- a/autres/lineup.html
+++ b/autres/lineup.html
@@ -9,7 +9,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <link rel="stylesheet" href="../assets/style.css">
-<script src="../assets/nav.js" defer></script>
+<script src="../assets/index.js" defer></script>
 </head>
 
 <body>
@@ -47,7 +47,7 @@
             <br>
             <div class=" row  row-cols-1 row-cols-md-3 row-cols-lg-6 d-flex justify-content-center mt-5 me-5 ms-5 me-5  p-2">
                 <div class="col m-3">
-                    <a href="./star/1plike140.html"> <img src="../assets/img/1plike140.jpg" alt="1plike140" class="rounded-circle border-2 ">
+                    <a href="./star/1plike140.html"> <img src="../assets/img/1plike140.jpg" alt="1plike140" class="rounded-circle  ">
                     <p>1plike Prime</p></a>
                 </div>
 
