--- a/autres/saturday.html
+++ b/autres/saturday.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../assets/style.css">
-  <script src="../assets/nav.js" defer></script>
+  <script src="../assets/index.js" defer></script>
 
 </head>
 
@@ -32,43 +32,53 @@
   </div>
 </header>
 <!-- ========== fin header ========== -->
+<!-- ========== main ========== -->
+
 <main>
-  <div class="prog container">
+  <div class="text-center text-white ">
     <h1 class="mt-5"> SATURDAY 2nd AUGUST</h1>
-    <div class="row  row-cols-1 row-cols-md-2 row-cols-lg-5 d-flex justify-content-center ms-4 me-4">
-      <a href="lineup.html"><div class="col border rounded-5 m-3 p-2">All </div></a>
-      <a href="../autres/friday.html"><div class="col border rounded-5 m-3 p-2">Friday 1st </div> </a>
-      <a href="../autres/saturday.html"><div class="col border rounded-5 m-3 p-2">Saturday 2nd </div> </a>
-      <a href="../autres/sunday.html"><div class="col border rounded-5 m-3 p-2">Sunday 3rd </div></a>
+    <br>
+    <div class="prog row  row-cols-1 row-cols-md-2 row-cols-lg-5 d-flex justify-content-center ps-5 pe-5">
+      <a href="lineup.html"><div class="col border rounded-5 m-3 p-2 ">All </div></a>
+      <a href="../autres/friday.html"><div class="prog-btn col border rounded-5 m-3 p-2  ">Friday 1st </div> </a>
+      <a href="../autres/saturday.html"><div class="prog-btn col border rounded-5 m-3 p-2">Saturday 2nd </div> </a>
+      <a href="../autres/sunday.html"><div class="prog-btn col border rounded-5 m-3 p-2">Sunday 3rd </div></a>
     </div>
-
-
-    <div class="row  row-cols-1 row-cols-md-3 row-cols-lg-6 d-flex justify-content-center mt-5">
+    <br>
+    <div class=" row  row-cols-1 row-cols-md-3 row-cols-lg-6 d-flex justify-content-center mt-5 me-5 ms-5 me-5  p-2">
       <div class="col m-3">
-        <img src="../assets/img/1plike140.jpg" alt="1plike140" class="rounded-circle border-2 ">
-        <p>1plike Prime</p>
+        <a href="./star/1plike140.html"> <img src="../assets/img/1plike140.jpg" alt="1plike140" class="rounded-circle border-2 ">
+          <p>1plike Prime</p>
+        </a>
       </div>
 
       <div class="col  m-3">
-        <img src="../assets/img/bart.jpg" alt="El Barto" class="rounded-circle border-2 ">
-        <p>El Barto</p>
+        <a href="./star/1plike140.html"><img src="../assets/img/bart.jpg" alt="El Barto" class="rounded-circle border-2 ">
+          <p>El Barto</p>
+        </a>
       </div>
 
       <div class="col m-3 ">
-        <img src="../assets/img/Leonide.jpg" alt="Jerry Léonide" class="rounded-circle border-2 ">
-        <p>Mr. Léonide</p>
+        <a href="./star/1plike140.html"><img src="../assets/img/Leonide.jpg" alt="Jerry Léonide" class="rounded-circle border-2 ">
+          <p>Mr. Léonide</p>
+        </a>
       </div>
 
       <div class="col m-3 ">
-        <img src="../assets/img/julien.png" alt="julien Naty" class="rounded-circle border-2 ">
-        <p>Julien Naty</p>
+        <a href="./star/1plike140.html"><img src="../assets/img/julien.png" alt="julien Naty" class="rounded-circle border-2 ">
+          <p>Julien Naty</p>
+        </a>
       </div>
 
-      <div class="col m-3">
-        <img src="../assets/img/gattouz.png" alt="gattouz" class="rounded-circle border-2 ">
-        <p>Gattouz</p>
+      <div class="col m-3 ">
+        <a href="./star/1plike140.html"><img src="../assets/img/julien.png" alt="julien Naty" class="rounded-circle border-2 ">
+          <p>Julien Naty</p>
+        </a>
       </div>
     </div>
+  </div>
+
+  <div class=" text-center text-white bg-black p-5 rounded-3 vw-100 wh-100">
     <div class="container mt-5">
       <h2>SCHEDULE</h2>
     </div>
@@ -155,7 +165,9 @@
         </tbody>
       </table>
     </div>
+  </div>
 </main>
+
 <footer>
   <p>Copyright &copy; 2025 — All rights reserved.</p>
   <p>Designed by
@@ -165,7 +177,5 @@
     <a href="https://www.linkedin.com/in/timeo-laubignat/">Timéo LAUBIGNAT.</a>
   </p>
 </footer>
-
-
 </body>
 </html>
