--- a/autres/star/1plike140.html
+++ b/autres/star/1plike140.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../../assets/style.css">
-  <script src="../../assets/nav.js" defer></script>
+  <script src="../../assets/index.js" defer></script>
 </head>
 
 <body>
@@ -20,125 +20,131 @@
     <div class="menu-container">
       <div class="nav-links mb-5">
         <ul>
-          <li><a href="/index.html">ACCUEIL</a></li>
-          <li><a href="../ticket.html">TICKETS</a></li>
-          <li><a href="../lineup.html">PROGRAMMATION</a></li>
-          <li><a href="../benevole.html">BÉNÉVOLE</a></li>
-          <li><a href="../infos.html">INFOS</a></li>
+          <li><a href="../../index.html">ACCUEIL</a></li>
+          <li><a href="../../autres/ticket.html">TICKETS</a></li>
+          <li><a href="../../autres/lineup.html">PROGRAMMATION</a></li>
+          <li><a href="../../autres/benevole.html">BÉNÉVOLE</a></li>
+          <li><a href="../../autres/infos.html">INFOS</a></li>
         </ul>
       </div>
     </div>
   </div>
 </header>
+
 <!-- ========== fin header ========== -->
+<!-- ========== main ========== -->
+
 <main>
-    <div class="prog container mb-5 w-75">
-        <a href="../lineup.html"><div class="col border rounded-5 m-3 p-2 ">back </div></a>
-      <br>
-      <br>
-        <h1 class="mt-5"> 1PLIKE140 PRIME</h1>
-    </div>
-      <br>
-    <div class="row  row-cols-1 row-cols-md-3 row-cols-lg-3 d-flex justify-content-center mt-5">
-      <div class=" me-5 ms-5">
-        <img src="../../assets/img/1plike140.jpg" alt="1plike140" class="star rounded-circle"> </div>
-        <p class="presentation text-white"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias atque consectetur
-          eius, explicabo fuga fugit mollitia quas reprehenderit? Consectetur inventore laudantium odit omnis quis,
-          reiciendis reprehenderit sit temporibus voluptas voluptates.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque dicta dolor impedit laborum magnam minima
-          molestiae nobis omnis pariatur
-          quia repellendus sed, temporibus, voluptas? Incidunt neque numquam sint veritatis voluptates!</p>
-    </div>
+    <div class="text-center text-white ">
+      <div class=" prog d-flex justify-content-center">
+        <a href="javascript:history.back()" class="w-50 "><div class="col border rounded-5 m-3 pb-1 pt-1  "> BACK </div></>
+      </div>
+        <h1 class="mt-5"> 1PLIKE140</h1>
 
-  <br>
-  <br>
-    <div class="container mt-5">
-      <h2>SCHEDULE</h2>
-    </div>
+        <div class=" row  row-cols-1 row-cols-md-2 row-cols-lg-2 d-flex justify-content-center  p-2">
+            <div>
+              <img src="../../assets/img/1plike140.jpg" class="rounded-circle w-50">
+            </div>
+        </div>
 
-    <div class="container mt-5">
-      <table class="table table-bordered">
-        <thead>
-        <tr>
-          <th>TIME</th>
-          <th>SUNDAY 3rd</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr >
-          <td> 1PM</td>
-          <td class="table-success"> Open</td>
-        </tr>
-        </tbody>
-        <tbody>
-        <tr>
-          <td> 2PM - 3PM</td>
-          <td> </td>
-        </tr>
-        </tbody>
-        <tbody>
-        <tr>
-          <td> 3PM - 4PM</td>
-          <td> </td>
-        </tr>
-        </tbody>
-        <tbody>
-        <tr>
-          <td> 4PM - 5PM</td>
-          <td> </td>
-        </tr>
-        </tbody>
-        <tbody>
-        <tr>
-          <td> 5PM - 6PM</td>
-          <td> </td>
-        </tr>
-        </tbody>
-        <tbody>
-        <tr>
-          <td> 6PM - 7PM</td>
-          <td> </td>
-        </tr>
-        </tbody>
-        <tbody>
-        <tr>
-          <td> 7PM - 8PM</td>
-          <td> </td>
-        </tr>
-        </tbody>
-        <tbody>
-        <tr>
-          <td> 8PM - 9PM</td>
-          <td> </td>
-        </tr>
-        </tbody>
-        <tbody>
-        <tr>
-          <td> 9PM - 10PM</td>
-          <td> </td>
-        </tr>
-        </tbody>
-        <tbody>
-        <tr>
-          <td> 10PM - 11PM</td>
-          <td> </td>
-        </tr>
-        </tbody>
-        <tbody>
-        <tr>
-          <td> 11PM - 12PM</td>
-          <td> </td>
-        </tr>
-        </tbody>
-        <tbody>
-        <tr>
-          <td> 1AM</td>
-          <td class="table-danger"> Closed</td>
-        </tr>
-        </tbody>
-      </table>
+      <div class=" m-5 ps-5 pe-5">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur, assumenda dolores, laboriosam neque nostrum quae quas quidem, similique ut voluptate! Aliquam dolorum expedita ut vitae! At, ipsam odit.</p></a>
+        </div>
     </div>
-</main>
+    <br>
+    <br>
+    <div class=" text-center text-white bg-black p-5 rounded-3 vw-100 wh-100">
+        <div class="  m-5">
+           <h1>SCHEDULE</h1>
+        </div>
+
+        <div class="m-5">
+            <table class="table table-bordered ">
+                <thead>
+                  <tr>
+                    <th>TIME</th>
+                    <th>FRI. 1</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr >
+                    <td> 1PM</td>
+                    <td class="table-success"> Open</td>
+                  </tr>
+                  </tbody>
+                  <tbody>
+                  <tr>
+                    <td> 2PM - 3PM</td>
+                    <td> </td>
+                  </tr>
+                  </tbody>
+                  <tbody>
+                  <tr>
+                    <td> 3PM - 4PM</td>
+                    <td> </td>
+                  </tr>
+                  </tbody>
+                  <tbody>
+                  <tr>
+                    <td> 4PM - 5PM</td>
+                    <td> </td>
+                  </tr>
+                  </tbody>
+                  <tbody>
+                  <tr>
+                    <td> 5PM - 6PM</td>
+                    <td> </td>
+                  </tr>
+                  </tbody>
+                  <tbody>
+                  <tr>
+                    <td> 6PM - 7PM</td>
+                    <td> </td>
+                  </tr>
+                  </tbody>
+                  <tbody>
+                  <tr>
+                    <td> 7PM - 8PM</td>
+                    <td> </td>
+                  </tr>
+                  </tbody>
+                  <tbody>
+                  <tr>
+                    <td> 8PM - 9PM</td>
+                    <td> </td>
+                  </tr>
+                  </tbody>
+                  <tbody>
+                  <tr>
+                    <td> 9PM - 10PM</td>
+                    <td> </td>
+                  </tr>
+                  </tbody>
+                  <tbody>
+                  <tr>
+                    <td> 10PM - 11PM</td>
+                    <td> </td>
+                  </tr>
+                  </tbody>
+                  <tbody>
+                  <tr>
+                      <td> 11PM - 12PM</td>
+                      <td> </td>
+                  </tr>
+                  </tbody>
+                  <tbody>
+                    <tr>
+                        <td> 1AM</td>
+                        <td class="table-danger"> Closed</td>
+                    </tr>
+                  </tbody>
+            </table>
+          </div>
+      </div>
+  </main>
+  <!-- ========== fin main ========== -->
+  <!-- ========== footer ========== -->
+
 <footer>
   <p>Copyright &copy; 2025 — All rights reserved.</p>
   <p>Designed by
@@ -148,7 +154,6 @@
     <a href="https://www.linkedin.com/in/timeo-laubignat/">Timéo LAUBIGNAT.</a>
   </p>
 </footer>
-
-
+<!-- ========== fin footer ========== -->
 </body>
-</html>
+</html></html>
